--- a/_config.yml
+++ b/_config.yml
@@ -16,21 +16,21 @@ banner-desc: # add banner description
 # Author settings
 author-pic: face.jpg # your photo
 author-name: Mahaveer Satra # your name
-about-author: # about author
+about-author: An outdoor fanatic, eager to learn bits and pieces about our strange world # about author
 email: mahaveersatra@gmail.com # your email
-phone: (XXX)-XXX-XXXX # your pnone number
+phone: (XXX)-XXX-XXXX # your phone number
 website: https://mahaveersatra.github.io/ # you website
 
 # Social link
 google_url:    # add url link
-twitter_url:   # add url link
-instagram_url: # add url link
+twitter_url:   https://twitter.com/Mahaveersatra # add url link
+instagram_url: https://www.instagram.com/mahaveersatra/ # add url link
 pinterest_url: # add url link
 dribbble_url:  # add url link
-facebook_url:  # add url link
+facebook_url:  https://www.facebook.com/mahaveer.satra # add url link
 
 # Disqus
-discus_identifier: mr-brown # add your discus identifier.  Not your username.  To get this, register your forum here with a unique ID: https://disqus.com/admin/create/
+discus_identifier: # add your discus identifier.  Not your username.  To get this, register your forum here with a unique ID: https://disqus.com/admin/create/
 
 # Newsletter
 mailchimp: # add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
