--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ facebook_url:  https://www.facebook.com/mahaveer.satra # add url link
 discus_identifier: # add your discus identifier.  Not your username.  To get this, register your forum here with a unique ID: https://disqus.com/admin/create/
 
 # Newsletter
-mailchimp: https://github.us5.list-manage.com/subscribe/post?u=4264f90e41da8c3bb610adecd&amp;id=1b79ba831d # add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
+mailchimp: us5.list-manage.com/subscribe/post?u=4264f90e41da8c3bb610adecd&amp;id=1b79ba831d # add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
 
 # Tracker
 analytics: G-289KNPEFLS
